--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - nginx-in
     ports:
       - "11935:1935"
-      - "8080:80"
+      - "${HLS_HTTP_PORT:-80}:80"
     volumes:
       - routing-config:/etc/nginx/dynamic
 
