Accept CORS unconditionally

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/restify": "^8.4.2",
+    "@types/restify-cors-middleware": "^1.0.1",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "node-ansible": "^0.5.5",
-    "restify": "^8.5.1"
+    "restify": "^8.5.1",
+    "restify-cors-middleware": "^1.1.1"
   }
 }
